# ppl.nn

./: build-for-test.sh  build.sh  log  net.sh
src/ppl/nn/engines/cuda/impls/: CMakeLists.txt
src/ppl/nn/engines/cuda/impls/include/cudakernel/: matmul.h
src/ppl/nn/engines/cuda/impls/include/cudakernel/arithmetic/: arithmetic.h
src/ppl/nn/engines/cuda/impls/include/cudakernel/common/: atomic.h  common.h
src/ppl/nn/engines/cuda/impls/include/cudakernel/gemm/: bgemm.h  gemm.h
src/ppl/nn/engines/cuda/impls/include/cudakernel/math/: math.h
src/ppl/nn/engines/cuda/impls/include/cudakernel/memory/: channel_shuffle.h  depth_to_space.h  transpose.h
src/ppl/nn/engines/cuda/impls/include/cudakernel/nn/: batch_normalization.h  convtranspose.h  global_pooling_ave.h  pooling_max.h  resize.h
src/ppl/nn/engines/cuda/impls/include/cudakernel/nn/conv/: conv_fp16.h  depthwise.h
src/ppl/nn/engines/cuda/impls/include/cudakernel/reformat/: reformat.h
src/ppl/nn/engines/cuda/impls/include/cudakernel/unary/: leakyrelu.h
src/ppl/nn/engines/cuda/impls/src/arithmetic/: arithmetic.cu  logical.cu  relation.cu
src/ppl/nn/engines/cuda/impls/src/memory/: channel_shuffle.cu  concat.cu  depth_to_space.cu  expand.cu  reshape.cu  transpose.cu
src/ppl/nn/engines/cuda/impls/src/nn/: batch_normalization.cu  bgemm.cu  convtranspose.cu  cumsum.cu  deform_conv.cu  gemm.cu  gemm_int8.cu  global_pooling_ave.cu  global_pooling_max.cu  lstm.cu  matmul.cu  non_zero.cu  pooling_ave.cu  pooling_max.cu  resize.cu  softmax.cu
src/ppl/nn/engines/cuda/impls/src/nn/conv/: conv.cu  conv_common.h  conv_fp16.cu  conv_int8.cu  conv_jit.cc  conv_jit.h  gene_header.py  gene_kernel.cc  kernel_type.h
src/ppl/nn/engines/cuda/impls/src/nn/conv/2spk/: gen_2spk_kernel.py  gen_2spk_sm75_fp16_1688_kernel.py  gen_2spk_sm75_fp16_hmma1688_kernel.py  gen_2spk_sm75_fp16_kernel.py  gen_2spk_sm75_int8_8816_kernel.py  gen_2spk_sm75_int8_imma8816_kernel.py  gen_2spk_sm75_int8_kernel.py  gen_2spk_sm80_fp16_16816_kernel.py  gen_2spk_sm80_fp16_hmma16816_kernel.py  gen_2spk_sm80_fp16_hmma1688_kernel.py  gen_2spk_sm80_fp16_kernel.py  gen_2spk_sm80_int8_16816_kernel.py  gen_2spk_sm80_int8_16832_kernel.py  gen_2spk_sm80_int8_imma16832_kernel.py  gen_2spk_sm80_int8_kernel.py
src/ppl/nn/engines/cuda/impls/src/nn/conv/2spk/common/: const_macros.h  hmma16816_macros.h  hmma1688_main_body.h  main_body.h  output_macros.h  reduce_macros.h  smem_macros.h  uni_undefs.h
src/ppl/nn/engines/cuda/impls/src/nn/conv/2spk/fp16/: const_macros.h  main_body16816.h  main_body1688.h  output_macros.h
src/ppl/nn/engines/cuda/impls/src/nn/conv/2spk/fp16/f1/: dmem_reg_macros.h
src/ppl/nn/engines/cuda/impls/src/nn/conv/2spk/fp16/f3/: dmem_reg_macros.h
src/ppl/nn/engines/cuda/impls/src/nn/conv/2spk/fp16/fn/: dmem_reg_macros.h
src/ppl/nn/engines/cuda/impls/src/nn/conv/2spk/int8/: const_macros.h  main_body.h  main_body16816.h  main_body16832.h  main_body8816.h  output_macros.h  reduce_macros.h  smem_macros.h  uni_undefs.h
src/ppl/nn/engines/cuda/impls/src/nn/conv/2spk/int8/f1/: dmem_async_macros.h  dmem_reg_macros.h
src/ppl/nn/engines/cuda/impls/src/nn/conv/2spk/int8/f3/: bound_macros.h  dmem_async_macros.h  (+1 more)
src/ppl/nn/engines/cuda/impls/src/nn/conv/common/: conv_cvt.cu  init_lut.cc  init_lut.h  merge_split.cu  merge_split.h
src/ppl/nn/engines/cuda/impls/src/nn/conv/idxn/: gen_idxn_sm75_fp16_1688_kernel.py  gen_idxn_sm75_fp16_kernel.py  gen_idxn_sm75_int8_8816_kernel.py  gen_idxn_sm75_int8_kernel.py  gen_idxn_sm80_fp16_16816_kernel.py  gen_idxn_sm80_fp16_hmma16816_kernel.py  gen_idxn_sm80_fp16_kernel.py  gen_idxn_sm80_int8_16816_kernel.py  gen_idxn_sm80_int8_16832_kernel.py  gen_idxn_sm80_int8_imma16832_kernel.py  gen_idxn_sm80_int8_kernel.py
src/ppl/nn/engines/cuda/impls/src/nn/conv/idxn/common/: const_macros.h  hmma16816_i2_macros.h  hmma16816_i4_macros.h  main_body.h  output_macros.h  uni_undefs.h
src/ppl/nn/engines/cuda/impls/src/nn/conv/idxn/fp16/: const_macros.h  main_body.h  output_macros.h
src/ppl/nn/engines/cuda/impls/src/nn/conv/idxn/int8/: const_macros.h  dmem_i1_macros.h  dmem_i2_macros.h  dmem_i4_macros.h  imma16816_output_macros.h  imma8816_output_macros.h  main_body.h  uni_undefs.h
src/ppl/nn/engines/cuda/impls/src/nn/conv/int8_2spk/: gen_2spk_int8_kernel.py
src/ppl/nn/engines/cuda/impls/src/nn/conv/int8_2spk/common/: const_macros.h  main_body.h  output_macros.h  reduce_macros.h  uni_undefs.h
src/ppl/nn/engines/cuda/impls/src/nn/conv/int8_idxn/: gen_idxn_int8_kernel.py
src/ppl/nn/engines/cuda/impls/src/nn/conv/int8_idxn/common/: const_macros.h  dmem_i1_macros.h  dmem_i2_macros.h  dmem_i4_macros.h  imma_i1_macros.h  main_body.h  output_macros.h  quant_macros.h
src/ppl/nn/engines/cuda/impls/src/nn/conv/swzl/: gen_swzl_kernel.py  gen_swzl_sm75_fp16_1688_kernel.py  gen_swzl_sm75_fp16_hmma1688_kernel.py  gen_swzl_sm75_fp16_kernel.py  gen_swzl_sm75_int8_8816_kernel.py  gen_swzl_sm75_int8_imma8816_kernel.py  gen_swzl_sm75_int8_kernel.py  gen_swzl_sm80_fp16_16816_kernel.py  gen_swzl_sm80_fp16_hmma16816_kernel.py  gen_swzl_sm80_fp16_hmma1688_kernel.py  gen_swzl_sm80_fp16_kernel.py  gen_swzl_sm80_int8_16816_kernel.py  gen_swzl_sm80_int8_16832_kernel.py  gen_swzl_sm80_int8_imma16832_kernel.py  gen_swzl_sm80_int8_kernel.py
src/ppl/nn/engines/cuda/impls/src/nn/conv/swzl/common/: const_macros.h  main_body.h  output_macros.h  uni_undefs.h
src/ppl/nn/engines/cuda/impls/src/nn/conv/swzl/fp16/: const_macros.h  main_body16816.h  main_body1688.h  output_macros.h
src/ppl/nn/engines/cuda/impls/src/nn/conv/swzl/int8/: const_macros.h  main_body.h  main_body16816.h  main_body16832.h  main_body8816.h  output_macros.h  reduce_macros.h  smem_macros.h  uni_undefs.h
src/ppl/nn/engines/cuda/impls/src/nn/depthwise/: conv_depthwise_kernel.h  depthwise.cu  depthwise_info.h  sp_depthwise_int8.h
src/ppl/nn/engines/cuda/impls/src/reduce/: argmax.cu  reduce.cu
src/ppl/nn/engines/cuda/impls/src/reformat/: cvt_type.cu  cvt_type_tensor.cu  reformat.cu
src/ppl/nn/engines/cuda/impls/src/unary/: clip.cu  erf.cu  exp.cu  unary.cu
(+116 files in other folders)
